--- a/index.html
+++ b/index.html
@@ -143,10 +143,9 @@
 								</div>
 								<div class="desc">
 									<h17>HOBBIES</h17>
-									<p>I like to draw specifically characters, landsape and architecture as well. 
-										Cooking is also one of the ways i releive stress.
-										Reading books, honestly it's been since i read one but i do enjoy reading.
-										My Favourite Books: The Shadow Club, Finding Audrey (!!recommended!!)
+									<p>I enjoy drawing, particularly characters, landscapes, and architecture. Cooking is another way I relieve stress.
+									Although it's been a while since I read a book, I enjoy reading.
+									Some of my favorite books include *The Shadow Club* and *Finding Audrey* (which I highly recommend!).
 									</p>
 								</div>
 						</div>
