--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
             </div>
-						<a href="https://drive.google.com/file/d/161ZaxG5vPyGTHtUsAHjk66o_n40CGBvA/view?usp=sharing" target="_blank">
+						<a href= "https://drive.google.com/file/d/14c9Frl56rJjQVrAGcSgyiNqAqm9PEbSJ/view?usp=sharing">
               <button type="button" class="btn btn-success">Download CV</button>
             </a>
 
