--- a/index.html
+++ b/index.html
@@ -608,9 +608,7 @@
                       <div class="hover-item">
                           <h6>PROJECT SOURCES</h6>
                           <div class="icons">
-                              <a href="https://drive.google.com/drive/folders/1A7I471jSVEBYFA3dN43caBOc0xg8MsWz?usp=drive_link" class="icon" target="_blank">
-                                <i class="fa-brands fa-google-drive"></i>
-                              </a>
+
                           </div>
                       </div>
                       <div class="project-description">
@@ -638,15 +636,14 @@
                     <div class="hover-item">
                         <h6>PROJECT SOURCES</h6>
                         <div class="icons">
-                            <a href="https://drive.google.com/drive/folders/1A7I471jSVEBYFA3dN43caBOc0xg8MsWz?usp=drive_link" class="icon" target="_blank">
-                              <i class="fa-brands fa-google-drive"></i>
+                            
                             </a>
                         </div>
                     </div>
                     <div class="project-description">
                         <p>Motion Graphics -2</p>
                         <button type="button" class="btn btn-outline-light" onclick="showModal('modal13','PROJECT DESCRIPTION',
-                        'Medium Used: Adobe AfterEffects 2025 \n \n This was my second attempt to make a motion graphics video for my CART 212 class final peoject with my dear Friend Cheuk as a my team mate. \n This video was a showcase of all that i had learned throughout the semester. Compared to the firest video the approch in this project was to try doing more of an adevertiseement type of motion graphics that is on beat and  smooth \n It is smoother and more on beat than the first one. But there is still a long way to go and discover more things in this realm .','https://www.youtube.com/embed/QFgiCSlcwng?si=8Bt-uEpVLHiS0Z2D'
+                        'Medium Used: Adobe AfterEffects 2025 \n \n This was my second attempt to make a motion graphics video for my CART 212 class final project with my dear Friend Cheuk as a my teammate. \n This video was a showcase of all that I had learned throughout the semester. Compared to the first video, the approach in this project was to try doing more of an adevertiseement type of motion graphics that is on beat and  smooth \n It is smoother and more on beat than the first one. But there is still a long way to go and discover more things in this realm .','https://www.youtube.com/embed/QFgiCSlcwng?si=8Bt-uEpVLHiS0Z2D'
                         )">
                           MORE ABOUT THE PROJECT
                         </button>
